Align mobile expert stat card with photo and fix badge geometry

--- a/assets/scss/pages/_front-page-expert.scss
+++ b/assets/scss/pages/_front-page-expert.scss
@@ -401,6 +401,9 @@
     width: #{mixins.vw(355px, 375px)};
     height: #{mixins.vw(293px, 375px)};
     margin-top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
   }
 
   .expert-section__photo-frame {
@@ -418,7 +421,9 @@
   .expert-stat-card {
     position: absolute;
     left: 0;
-    bottom: 0;
+    top: 50%;
+    bottom: auto;
+    transform: translateY(-50%);
     width: #{mixins.vw(170px, 375px)};
     height: #{mixins.vw(182px, 375px)};
     margin-top: 0;
@@ -459,13 +464,25 @@
     right: #{mixins.vw(12px, 375px)};
     top: #{mixins.vw(-9px, 375px)};
     width: #{mixins.vw(40px, 375px)};
-    height: #{mixins.vw(53px, 375px)};
+    height: #{mixins.vw(44px, 375px)};
+    background: #e9e9e9;
+    overflow: hidden;
+    display: block;
   }
 
   .expert-stat-card__badge-inner {
+    position: absolute;
+    left: #{mixins.vw(3px, 375px)};
+    top: #{mixins.vw(-9px, 375px)};
     width: #{mixins.vw(35px, 375px)};
     height: #{mixins.vw(50px, 375px)};
-    padding-bottom: #{mixins.vw(10px, 375px)};
+    border-style: solid;
+    border-color: rgba(5, 17, 32, 0.16);
+    border-width: 0 1px 1px 1px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    padding: 0 0 #{mixins.vw(10px, 375px)} 0;
   }
 
   .expert-stat-card__badge-inner img {
